[#153370005] Bug fix: dg-text-measurer positioning interferes with embedded CODAP
We fix this by positioning the element offscreen explicitly and making the position fixed instead of absolute.

--- a/apps/dg/resources/dg.css
+++ b/apps/dg/resources/dg.css
@@ -1202,11 +1202,13 @@ input.dg-editor-text {
 }
 
 .dg-text-measurer {
-    position: absolute;
+    position: fixed;
     visibility: hidden;
     height: auto;
     width: auto;
     white-space: nowrap;
+    top: -1000px;
+    left: -1000px;
 }
 
 .dg-formula-column {
